# shpee

./: .gitignore  LICENSE.md  README.md  pyproject.toml
shpee/: __init__.py  auth.py  client.py  shortlink.py
