[tool.poetry]
name = "shpee"
version = "0.0.1"
description = "Shopee Affiliate API Wrapper"
authors = ["Ngalim Siregar <ngalim.siregar@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.21.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
